--- a/src/App.css
+++ b/src/App.css
@@ -192,19 +192,21 @@ h1 {
   justify-content: center;
   align-items: center;
   z-index: 1000;
+  animation: fadeIn 0.5s ease-in-out;
+
 }
 
 .popup-content {
   min-width: 320px;
   background: black;
   color: white;
-  padding: 0px;
+  padding: 0; /* Ensure padding is set to zero */
   border-radius: 8px;
-  position: relative;
+  position: relative; /* Keep this to position the fade effect */
   width: 80%;
   max-width: 600px;
-  max-height: 60%;
-  overflow-y: auto;
+  max-height: 50vh;
+  overflow-y: auto; /* Ensure overflow-y is auto for scrolling */
   text-align: center;
   z-index: 2000;
 }
@@ -275,12 +277,34 @@ h1 {
   scrollbar-color: #ff0000 rgba(255, 0, 0, 0.1);
 }
 
+.fade-out {
+  position: sticky;
+  top: 0;
+  bottom: 250px;
+  left: 0;
+  width: 100%;
+  height: 100px;
+  background: linear-gradient(to bottom, transparent, black);
+  z-index: 3000;
+}
+
 @keyframes eye-glow {
   0% {
     box-shadow: 0 0 20px rgba(255, 0, 0, 0.7), 0 0 30px rgba(255, 0, 0, 0.4);
   }
   100% {
     box-shadow: 0 0 40px rgba(255, 0, 0, 1), 0 0 60px rgba(255, 0, 0, 0.4);
+  }
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0; /* Start fully transparent */
+    transform: translateY(-20px); /* Optional: Add a slight upward movement */
+  }
+  to {
+    opacity: 1; /* End fully visible */
+    transform: translateY(0); /* Return to original position */
   }
 }
 
