--- a/src/App.css
+++ b/src/App.css
@@ -280,7 +280,7 @@ h1 {
 .fade-out {
   position: sticky;
   top: 0;
-  bottom: 250px;
+  bottom: 25%;
   left: 0;
   width: 100%;
   height: 100px;
